@@ -105,4 +105,5 @@ enable_ai_production_ranking = true
 ; white (least desirable) to red (most desirable) with yellow in between. Also the exact number the AI gives any tile can be seen on its info box.
 enable_ai_city_location_desirability_display = true
 
-zero_corruption_when_off = false
+zero_corruption_when_off = true
+disallow_land_units_from_settling_water = true
