@@ -185,6 +185,8 @@ load_config (char const * filename, struct c3x_config * cfg)
 					cfg->enable_ai_city_location_desirability_display = ival != 0;
 				else if ((0 == strncmp (key.str, "zero_corruption_when_off", key.len)) && read_int (&value, &ival))
 					cfg->zero_corruption_when_off = ival;
+				else if ((0 == strncmp (key.str, "disallow_land_units_from_settling_water", key.len)) && read_int (&value, &ival))
+					cfg->disallow_land_units_from_settling_water = ival;
 
 				else if ((0 == strncmp (key.str, "use_offensive_artillery_ai", key.len)) && read_int (&value, &ival))
 					cfg->use_offensive_artillery_ai = ival != 0;
@@ -1348,7 +1350,13 @@ patch_Unit_can_perform_command (Unit * this, int edx, int unit_command_value)
 	    (this->Body.CivID == p_main_screen_form->Player_CivID) &&
 	    (unit_command_value == UCV_Automate))
 		return 0;
-	else
+	else if (is->current_config.disallow_land_units_from_settling_water &&
+		 (unit_command_value == UCV_Build_City)) {
+		Tile * tile = tile_at (this->Body.X, this->Body.Y);
+		enum UnitTypeClasses class = p_bic_data->UnitTypes[this->Body.UnitTypeID].Unit_Class;
+		return ((class != UTC_Land) || (! tile->vtable->m35_Check_Is_Water (tile))) &&
+			Unit_can_perform_command (this, __, unit_command_value);
+	} else
 		return Unit_can_perform_command (this, __, unit_command_value);
 }
 
