@@ -5,6 +5,7 @@
 - Press L on map to see how desirable the AI finds each tile as a city location
 - AI naval invasion forces can include artillery (with offensive artillery AI enabled)
 - Option to disable worker automation
+- Disallow land settlers from founding on water
 - Warn in case perfume target doesn't match any improvement name
 - Fix tile coords replacing resource name in the info box on the Steam version
 - Proper movement check for replacement army inclusion criteria
